# pea_z1_gusta

./: .gitignore  CMakeLists.txt  LICENSE  Packages.cmake  README.md
configs/: test_6.ini
data/: test_6_as.txt  tsp_17_1_as.txt  tsp_18_1_as.txt  tsp_20_1_as.txt
data/dr_lopuszynski/: test_11_as.txt  test_6_as.txt  test_8_as.txt
data/dr_lopuszynski/configs/: test_11.ini  test_6.ini  test_8.ini
data/dr_mierzwa/: tsp_17_2_as.txt  tsp_19_as.txt
data/dr_mierzwa/configs/: tsp_10.ini  tsp_12.ini  tsp_13.ini  tsp_14.ini  tsp_15.ini  tsp_17_1.ini  tsp_17_2.ini  tsp_18.ini  tsp_19.ini  tsp_20.ini  tsp_6_1.ini  tsp_6_2.ini
data/rand_atsp/: 10_rand_as.txt  11_rand_as.txt  12_rand_as.txt  13_rand_as.txt  14_rand_as.txt  15_rand_as.txt  16_rand_as.txt  17_rand_as.txt  18_rand_as.txt  5_rand_as.txt  6_rand_as.txt  7_rand_as.txt  8_rand_as.txt  9_rand_as.txt
data/rand_atsp/configs/: 10_rand_as.ini  11_rand_as.ini  12_rand_as.ini  13_rand_as.ini  14_rand_as.ini  15_rand_as.ini  16_rand_as.ini  17_rand_as.ini  18_rand_as.ini  5_rand_as.ini  6_rand_as.ini  7_rand_as.ini  8_rand_as.ini  9_rand_as.ini
data/rand_tsp/: 10_rand_s.txt  11_rand_s.txt  12_rand_s.txt  13_rand_s.txt  14_rand_s.txt  15_rand_s.txt  16_rand_s.txt  17_rand_s.txt  18_rand_s.txt  19_rand_s.txt  5_rand_s.txt  6_rand_s.txt  7_rand_s.txt  8_rand_s.txt  9_rand_s.txt
data/rand_tsp/configs/: 10_rand_s.ini  11_rand_s.ini  12_rand_s.ini  13_rand_s.ini  14_rand_s.ini  15_rand_s.ini  16_rand_s.ini  17_rand_s.ini  18_rand_s.ini  19_rand_s.ini  5_rand_s.ini  6_rand_s.ini  7_rand_s.ini  8_rand_s.ini  9_rand_s.ini
data/tsplib_atsp/: 100_kro124p.txt  171_ftv170.txt  17_br17.txt  323_rbg323.txt  34_ftv33.txt  358_rbg358.txt  36_ftv35.txt  39_ftv38.txt  403_rbg403.txt  43_p43.txt  443_rbg443.txt  45_ftv44.txt  48_ftv47.txt  48_ry48p.txt  53_ft53.txt  56_ftv55.txt  65_ftv64.txt  70_ft70.txt  71_ftv70.txt
data/tsplib_atsp/configs/: 100_kro124p.ini  171_ftv170.ini  17_br17.ini  323_rbg323.ini  34_ftv33.ini  358_rbg358.ini  36_ftv35.ini  39_ftv38.ini  403_rbg403.ini  43_p43.ini  443_rbg443.ini  45_ftv44.ini  48_ftv47.ini  48_ry48p.ini  53_ft53.ini  56_ftv55.ini  65_ftv64.ini  70_ft70.ini  71_ftv70.ini
data/tsplib_tsp/: 100_kroA100.txt  100_kroB100.txt  100_kroC100.txt  100_kroD100.txt  100_kroE100.txt  100_rd100.txt  101_eil101.txt  105_lin105.txt  107_pr107.txt  120_gr120.txt  124_pr124.txt  127_bier127.txt  130_ch130.txt  136_pr136.txt  137_gr137.txt  144_pr144.txt  14_burma14.txt  150_ch150.txt  150_kroA150.txt  150_kroB150.txt  152_pr152.txt  159_u159.txt  16_ulysses16.txt  175_si175.txt  17_gr17.txt  180_brg180.txt  195_rat195.txt  198_d198.txt  200_kroA200.txt  200_kroB200.txt  202_gr202.txt  21_gr21.txt  225_ts225.txt  225_tsp225.txt  226_pr226.txt  229_gr229.txt  22_ulysses22.txt  24_gr24.txt  262_gil262.txt  264_pr264.txt  (+36 more)
data/tsplib_tsp/configs/: 1000_dsj1000.ini  1002_pr1002.ini  100_kroA100.ini  100_kroB100.ini  100_kroC100.ini  100_kroD100.ini  100_kroE100.ini  100_rd100.ini  101_eil101.ini  1032_si1032.ini  105_lin105.ini  1060_u1060.ini  107_pr107.ini  1084_vm1084.ini  1173_pcb1173.ini  120_gr120.ini  124_pr124.ini  127_bier127.ini  1291_d1291.ini  1304_rl1304.ini  130_ch130.ini  1323_rl1323.ini  136_pr136.ini  1379_nrw1379.ini  137_gr137.ini  1400_fl1400.ini  1432_u1432.ini  144_pr144.ini  14_burma14.ini  150_ch150.ini  150_kroA150.ini  150_kroB150.ini  152_pr152.ini  159_u159.ini  16_ulysses16.ini  175_si175.ini  17_gr17.ini  180_brg180.ini  195_rat195.ini  198_d198.ini  (+49 more)
inc/: bf.hpp  bxb.hpp  gen.hpp  measure.hpp  nn.hpp  random.hpp  ts.hpp  util.hpp
inc/zadanie_1/: bf.hpp  nn.hpp  random.hpp
inc/zadanie_2/: bxb_bfs.hpp  bxb_dfs.hpp  bxb_lc.hpp
src/: CMakeLists.txt  bf.cpp  bxb_bfs.cpp  bxb_dfs.cpp  bxb_lc.cpp  gen.cpp  main.cpp  measure.cpp  nn.cpp  random.cpp  ts.cpp  util.cpp
src/zadanie_1/: CMakeLists.txt  bf.cpp  nn.cpp  random.cpp
src/zadanie_2/: CMakeLists.txt  bxb_bfs.cpp  bxb_dfs.cpp  bxb_lc.cpp
src/zadanie_3/: CMakeLists.txt  ts.cpp
src/zadanie_4/: CMakeLists.txt  gen.cpp
