if (${ZADANIE1_COMPILE})
    file(GLOB_RECURSE SRC_FILES_Z1 ./*.cpp)
    if (${MEASURE_COMPILE})
        add_executable(${PROJECT_NAME}_zadanie_1 ${SRC_FILES_Z1} ../main.cpp ../measure.cpp ../util.cpp)
    else()
        add_executable(${PROJECT_NAME}_zadanie_1 ${SRC_FILES_Z1} ../main.cpp ../util.cpp)
    endif()
    target_include_directories(${PROJECT_NAME}_zadanie_1 PRIVATE ${CMAKE_SOURCE_DIR}/inc)
    target_link_libraries(${PROJECT_NAME}_zadanie_1 PRIVATE fmt::fmt inih)
    target_include_directories(${PROJECT_NAME}_zadanie_1 PRIVATE ${CMAKE_SOURCE_DIR}/external/inih/inc)
    target_compile_options(${PROJECT_NAME}_zadanie_1 PRIVATE /W4 /permissive-)
    target_compile_definitions(${PROJECT_NAME}_zadanie_1 PRIVATE ZADANIE1=1 DATA_DIR="${CMAKE_SOURCE_DIR}/data/" WIN32_LEAN_AND_MEAN NOMINMAX NOGDI)
endif()
