if (${ZADANIE3_COMPILE})
    file(GLOB_RECURSE SRC_FILES_Z3 ./*.cpp)
    if (${MEASURE_COMPILE})
        add_executable(${PROJECT_NAME}_zadanie_3 ${SRC_FILES_Z3} ../zadanie_1/nn.cpp ../main.cpp ../measure.cpp ../util.cpp)
    else()
        add_executable(${PROJECT_NAME}_zadanie_3 ${SRC_FILES_Z3} ../zadanie_1/nn.cpp ../main.cpp ../util.cpp)
    endif()
    target_include_directories(${PROJECT_NAME}_zadanie_3 PRIVATE ${CMAKE_SOURCE_DIR}/inc)
    target_link_libraries(${PROJECT_NAME}_zadanie_3 PRIVATE fmt::fmt inih)
    target_include_directories(${PROJECT_NAME}_zadanie_3 PRIVATE ${CMAKE_SOURCE_DIR}/external/inih/inc)
    target_compile_options(${PROJECT_NAME}_zadanie_3 PRIVATE /W4 /permissive-)
    target_compile_definitions(${PROJECT_NAME}_zadanie_3 PRIVATE ZADANIE3=1 DATA_DIR="${CMAKE_SOURCE_DIR}/data/" WIN32_LEAN_AND_MEAN NOMINMAX NOGDI)
endif()
